<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Story App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Password</string>
    <string name="email_taken">Email is already taken</string>
    <string name="timeout">Timeout!! please try again later</string>
    <string name="error_message">"Error message :  "</string>
    <string name="success_login">Login successfully</string>
    <string name="unauthorized">Please check email or password correctly</string>
    <string name="or_sign_in">or Register</string>
    <string name="logout">Logout</string>
    <string name="nama">Name</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="photo">photo</string>
    <string name="input_picture">Please input picture</string>
    <string name="input_des">Please input description</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="package_name">com.example.mystoryapp</string>
    <string name="message">"Message : "</string>
    <string name="add_story">Add Story</string>
    <string name="input_email">Please input your email</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="input_pass">Please input your password</string>
    <string name="pass_length">Password must be at least 8 characters</string>
    <string name="input_name">Please input your name</string>
    <string name="user_create">User created</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_data">NO DATA</string>
    <string name="detail_title">%1$s\'s Story</string>
    <string name="change_language">Change Language</string>
    <string name="maps_api_key" translatable="false">AIzaSyDEto3JB92B5RQGTeYPVxV4RqgaLVXQejg</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="location">Location</string>
    <string name="no_location">No Location</string>
    <string name="location_name_unknown">Location name unknown</string>
    <string name="addresss">No Address</string>
</resources>