<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/photo" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textSize="22sp"
            android:text="@string/nama"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

        <ImageView
            android:id="@+id/loc_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingStart="13dp"
            android:src="@drawable/baseline_location_on_24"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            app:layout_constraintEnd_toStartOf="@id/tv_location"
            android:contentDescription="@string/photo"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/loc_mark"
            app:layout_constraintStart_toEndOf="@id/loc_mark"
            app:layout_constraintBottom_toBottomOf="@id/loc_mark"
            android:text="@string/no_location" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loc_mark" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>